--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ python-dotenv==1.0.0
 pytest==7.4.3
 pytest-cov==4.1.0
 requests==2.31.0
+ultralytics>=8.0.0
+opencv-python>=4.8.0
+easyocr>=1.7.0
+numpy>=1.24.0
